fixes scrolling issue on ios 2

--- a/_sass/_intro.scss
+++ b/_sass/_intro.scss
@@ -7,7 +7,7 @@
   margin: 0 auto;
 
   // Without this we get x-axis scrolling
-  overflow-x: hidden;
+  overflow: hidden;
 
   // Emojis are absolute position
   position: relative;
